[#60288450] Removed requirement to cache numAssays and numAssaysActive from CartCompound in Query Cart.  This fixes the problem with this Add to Cart menu item not showing up for probes on the View Project page

--- a/BARD/web-app/css/bard.css
+++ b/BARD/web-app/css/bard.css
@@ -222,6 +222,10 @@ div.facets {
     font-size: .9em;
 }
 
+li label {
+    margin-bottom: 0;
+}
+
 .facets input[type="submit"] {
     float: right;
 }
